<resources>
    <string name="app_name">4000 Essential Words Book 1</string>
    <string name="unit_title">Unit Title</string>
    <string name="unit_num">Unit #</string>
    <string name="story_button">Story</string>
    <string name="story">Story</string>
    <string name="quiz_button">Quiz</string>
    <string name="quiz">Quiz</string>
    <string name="enter_1">Enter</string>
    <string name="unit_text">Unit  </string>
    <string name="word_list">List</string>
    <string name="unit_eng_str">Unit</string>
    <string name="quiz_result_eng_str">Quiz Result</string>
    <string name="result_eng_str">Results</string>
    <string name="settings_title_eng_str">Settings</string>
    <string name="word_text_definition">Definition</string>
    <string name="word_text_example">Example</string>
    <string name="word_divider">:</string>
    <string name="favorite_text">Favorite</string>
    <string name="review_words">Review</string>
    <string name="translate_text">Translate</string>
    <string name="play_word">Play Word</string>
    <string name="item_1">Auto Play Word Audio file</string>
    <string name="item_2">Auto Playa Word</string>
    <string name="item_3">Text Font Setting</string>
    <string name="item_4">change font</string>
    <string name="sample">TextView</string>
    <string name="unit">Unit</string>
    <string name="Book">Book</string>
    <string name="marked_word_title">Marked Word</string>
    <string name="number">Num</string>
    <string name="tab_title">tab title</string>
    <string name="word_edit">معنی لغت</string>
    <string name="definition_edit">ترجمه تعریف</string>
    <string name="example_edit">ترجمه مثال</string>
    <string name="add_noteedit">یادداشت</string>
    <string name="add_note_edit">افزودن یاداشت</string>
    <string name="percent">1</string>
    <string name="txt_option_one">Option #1</string>
    <string name="txt_option_two">Option #2</string>
    <string name="txt_option_three">Option #3</string>
    <string name="txt_option_four">Option #4</string>
    <string name="translate_dialog_title">نمایش معنی لغت و ترجمه ها</string>
    <string name="translate_all">همه</string>
    <string name="display_in_entrance_str">نمایش ترجمه در ابتدا</string>
    <string name="translate_word">معنی لغت</string>
    <string name="translate_definition">ترجمه تعریف</string>
    <string name="translate_example">ترجمه مثال</string>
    <string name="translate_story">ترجمه داستان</string>
    <string name="auto_play_speed_str">سرعت پخش خودکار : </string>
    <string name="eng_to_per_quiz">English To Persian Quiz</string>
    <string name="Photo_word_quiz">Photo Words Quiz </string>
    <string name="Per_to_eng_quiz">Persian To English Quiz</string>
    <string name="skip_answer">Skip Question</string>
    <string name="easy_btn">Easy</string>
    <string name="hard_btn">Hard</string>
    <string name="i_know">I Know</string>
    <string name="need_to_review">need to review</string>
    <string name="ask_me_again">Ask Me Again</string>
    <string name="need_to_learn">Need to learn</string>
    <string name="user_answer">Your Answer</string>
    <string name="correct_answer_str">صحیح</string>
    <string name="wrong_answer_str">غلط</string>
    <string name="skipped_answer_str">بی پاسخ</string>
    <string name="result_pie_chart">نتیجه کوییز</string>
    <string name="remain_1">لغات باقی مانده</string>
    <string name="studied">Studied :</string>
    <string name="search_word">جست و جوی لغت</string>
    <string name="continuestudying">Resume Your Study</string>
    <string name="search_hint">لغت مورد نظر را تایپ کنید</string>
    <string name="resume_study">ادامه یادگیری لغات</string>
    <string name="resume_book">کتاب</string>
    <string name="resume_unit">درس</string>
    <string name="name_book_1">کتاب اول\n چهار هزار لغت ضروری</string>
    <string name="name_book_2"> کتاب دوم\n چهار هزار لغت ضروری</string>
    <string name="name_book_3">کتاب سوم\n چهار هزار لغت ضروری</string>
    <string name="name_book_4">کتاب چهارم\n چهار هزار لغت ضروری</string>
    <string name="name_book_5">کتاب پنجم\n چهار هزار لغت ضروری</string>
    <string name="name_book_6">کتاب ششم\n چهار هزار لغت ضروری</string>
    <string name="short_sample">Textview</string>
    <string name="dis_tran_title">تنظیمات نمایش ترجمه ها</string>
    <string name="display_all_translation">نمایش همه</string>
    <string name="display_word_translation">نمایش معنی لغت</string>
    <string name="display_definition_translation">نمایش ترجمه تعریف</string>
    <string name="display_example_translation">نمایش معنی مثال</string>
    <string name="display_translations_word_detailed">نمایش ترجمه ها</string>
    <string name="auto_play_title">پخش خودکار تلفظ لغات</string>
    <string name="play_audio_title">پخش تلفظ لغات</string>
    <string name="auto_play_all">پخش خودکار همه</string>
    <string name="auto_play_word">لغت</string>
    <string name="auto_play_definition">تعریف</string>
    <string name="auto_play_example">مثال</string>
    <string name="replay_unit_audio_file_str">پخش مجدد درس در انتها</string>
    <string name="replay_words_audio_file_str">پخش مجدد لغات در انتها</string>
    <string name="play_next_unit_str">پخش درس بعد در انتها</string>
    <string name="display_translation">نمایش ترجمه</string>
    <string name="word_str">لغت</string>
    <string name="definition_Str">تعریف</string>
    <string name="example_str">مثال</string>
    <string name="all_str">همه</string>
    <string name="second_str">ثانیه</string>
    <string name="settings_sample_text_definition_title">Definition</string>
    <string name="two_dots_on_each_other"> : </string>
    <string name="settings_sample_text_definition">When some one is afraid they feel fear.</string>
    <string name="settings_sample_text_definition_translation">وقتی کسی میترسد احساس ترس میکند</string>
    <string name="english_text_size_picker_name">Text Size</string>
    <string name="persian_text_size_picker_name">اندازه متن</string>
    <string name="settings_text_size_title">انتخاب اندازه متن</string>
    <string name="audio_play_title">تنظینات پخش صدا</string>
    <string name="audio_play_all">پخش همه </string>
    <string name="audio_play_word">پخش لغت</string>
    <string name="audio_play_definition">پخش تعریف</string>
    <string name="audio_play_example">پخش مثال</string>
    <string name="key_auto_night_mode">KeyAutoNightMode</string>
    <string name="key_auto_play_audio_word">KeyAutoPlayAudioWord</string>
    <string name="key_text_size">KeyTextViewSize</string>
    <string name="key_text_font">KeyTextViewFont</string>
    <string name="key_display_translation">keyDisplayTranslation</string>
    <string name="key_quiz_timer_duration">keyTimerQuizDuration</string>
    <string name="eng_text_bolder_str">برچسته کردن متن انگلیسی</string>
    <string name="per_text_bolder_str">برجسته کردن متن فارسی</string>
    <string name="application_category">تنظیمات برنامه</string>
    <string name="night_mode_title">حالت شب خودکار برنامه</string>
    <string name="night_mode_summary">حالت شب برنامه بر اساس تنظیمات پیش فرض دستگاه</string>
    <string name="auto_play_words_title">پخش خودکار تلظ</string>
    <string name="auto_play_words_summary">هنگام انتخاب یا پیمایش لغات تلفظ کلمه پخش میشود</string>
    <string name="text_view_size_title">اندازه متن</string>
    <string name="text_view_size_summary">تغییز اندازه دلخواه متن لغات</string>
    <string name="text_view_font_title">نوع فونت متن</string>
    <string name="text_view_font_summary">تغییر دلخواه فونت متن لغات</string>
    <string name="text_view_story_size_title_str">اندازه متن داستان</string>
    <string name="text_view_story_size_summary_str">تغییر اندازه متن داستان</string>
    <string name="text_view_story_font_type_title_str">نوع فونت داستان</string>
    <string name="text_view_story_font_type_summary_str">تغییر فونت متن داستان</string>
    <string name="display_translation_title">نمایش ترجمه</string>
    <string name="display_translation_summary">نمایش پیش فرض ترجمه لغات, توضیح, مثال و داستان</string>
    <string name="quiz_timer_duration_title">مدت زمان سنج کوییز</string>
    <string name="quiz_timer_duration_summary">انتخاب مدت زمان برای هرسوال در کوییز </string>
    <string name="restore_settings_title_str">بازنشانی تنظیمات</string>
    <string name="download_file_title_str">دانلود فایل ها</string>
    <string name="download_file_summary_str">دانلود فایل های صوتی و تصویری</string>
    <string name="restore_settings_Summary_str">بازنشانی تنظیمات برنامه به حالت اولیه</string>
    <string name="play_word_audio_story_title_str">پخش لغت داستان</string>
    <string name="play_word_audio_story_summary_str">پخش لغت های برجسته شده در داستان هر درس</string>
    <string name="settings">Settings</string>
    <string name="settings_str">تنظیمات</string>
    <string name="review_word_str">مرور لغات</string>
    <string name="edit_word_str">ویرایش لغت</string>
    <string name="add_note_str">افزودن یادداشت</string>
    <string name="word_share_str">اشتراک گذاری لغت</string>
    <string name="review_str">مرور لغات</string>
    <string name="title_auto_night_mode_str">انتخاب حالت شب برنامه</string>
    <string name="device_default_night_mode_str">پیش فرض دستگاه</string>
    <string name="night_mode_str">حالت شب</string>
    <string name="day_mode_str">حالت روز</string>
    <string name="text_size_str">اندازه متن</string>
    <string name="story_text_size_str">اندازه متن داستان</string>
    <string name="per_text_size_str">اندازه متن فارسی</string>
    <string name="eng_text_size_str">اندازه متن انگلیسی</string>
    <string name="sample_text_str">متن نمونه</string>
    <string name="per_sample_story_text_str">متن نمونه داستان</string>
    <string name="eng_sample_story_text_str">Sample Story Text</string>
    <string name="eng_sample_text_str">Sample Text</string>
    <string name="quiz_timer_duration_str">مدت زمان برای هر سوال کوییز</string>
    <string name="quiz_time_second_str">زمان هر سوال  </string>
    <string name="both_lang_str">هردو زبان فارسی و انگلیسی</string>
    <string name="story_text_size_settings_title_str">نتخاب اندازه متن داستان</string>
    <string name="english_font_str">فونت انگلیسی</string>
    <string name="persian_font_Str">فونت فارسی</string>
    <string name="settings_play_word_audio_story_title_Str">پخش لغت برجسته شده در داستان</string>
    <string name="settings_font_story_str">انتخاب نوع فونت داستان</string>
    <string name="settings_choose_text_font_type_title">انتخاب فونت متن</string>
    <string name="text_font_settings_str">تنظیمات فونت</string>
    <string name="text_size_settings_str">تنظیمات اندازه متن</string>
    <string name="txt_others_settings_str">سایر</string>
    <string name="save_str">ذخیره</string>
    <string name="confirmation">تایید</string>
    <string name="reject_str">لغو</string>
    <string name="quiz_timer_cancel_str">لغو زمان سنج</string>
    <string name="dark_mode_str">حالت شب</string>
    <string name="buy_app">خرید برنامه</string>
    <string name="nav_contact_us">ارتباط با ما</string>
    <string name="invite_friends">دعوت از دوستان</string>
    <string name="appendix">پا ورقی ها</string>
    <string name="others">سایر</string>
    <string name="str_all_book">همه کتاب ها</string>
    <string name="str_first_book">کتاب اول</string>
    <string name="str_second_book">کتاب دوم</string>
    <string name="str_third_book">کتاب سوم</string>
    <string name="str_fourth_book">کتاب چهارم</string>
    <string name="str_fifth_book">کتاب پنجم</string>
    <string name="str_sixth_book">کتاب ششم</string>
    <string name="books">Books</string>
    <string name="book_1">Book 1</string>
    <string name="book_2">Book 2</string>
    <string name="book_3">Book 3</string>
    <string name="book_4">Book 4</string>
    <string name="book_5">Book 5</string>
    <string name="book_6">Book 6</string>
    <string name="saved_words">مرور لغات</string>
    <string name="study_status">وضعیت مطالعه</string>
</resources>