<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_buy_app"
            android:icon="@drawable/ic_baseline_local_grocery_store_24"
            android:title="@string/buy_app"/>

        <item
            android:id="@+id/saved_words"
            android:icon="@drawable/ic_baseline_bookmark_24"
            android:title="@string/saved_words"/>

        <item
            android:id="@+id/statics"
            android:icon="@drawable/ic_baseline_pie_chart_24"
            android:title="@string/study_status"/>

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_baseline_support_agent_24"
            android:title="@string/nav_contact_us"/>

        <item
            android:id="@+id/nav_invite_friends"
            android:icon="@drawable/ic_baseline_person_add_24"
            android:title="@string/invite_friends"/>


        <item
            android:id="@+id/nav_appendix"
            android:icon="@drawable/ic_baseline_attach_file_24"
            android:title="@string/appendix"/>

    </group>



    <item
        android:title="@string/books">
        <menu>
            <item
                android:id="@+id/book_1"
                android:icon="@drawable/book_icon"
                android:title="@string/book_1"/>
            <item
                android:id="@+id/book_2"
                android:icon="@drawable/book_icon"
                android:title="@string/book_2"
                android:actionLayout="@layout/dark_mode_switch_activity"/>
            <item
                android:id="@+id/book_3"
                android:icon="@drawable/book_icon"
                android:title="@string/book_3"/>
            <item
                android:id="@+id/book_4"
                android:icon="@drawable/book_icon"
                android:title="@string/book_4"
                android:actionLayout="@layout/dark_mode_switch_activity"/>
            <item
                android:id="@+id/book_5"
                android:icon="@drawable/book_icon"
                android:title="@string/book_5"/>
            <item
                android:id="@+id/book_6"
                android:icon="@drawable/book_icon"
                android:title="@string/book_6"
                android:actionLayout="@layout/dark_mode_switch_activity"/>
        </menu>
    </item>


    <item
        android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/exo_styled_controls_settings"
                android:title="@string/settings_str"/>
            <item
                android:id="@+id/nav_dark_mode_switch"
                android:icon="@drawable/ic_dark_mode_moon"
                android:title="@string/dark_mode_str"
                android:actionLayout="@layout/dark_mode_switch_activity"/>
        </menu>
    </item>



</menu>