<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_225sdp"
    android:layout_height="@dimen/_225sdp"
    android:layout_gravity="center">


    <TextView
        android:id="@+id/audio_play_settings_txt_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dis_tran_title"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/black"
        android:layout_margin="@dimen/_7sdp"/>

    <TextView
        android:id="@+id/audio_play_all_text_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_all_translation"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/audio_play_settings_txt_View"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"/>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/audio_play_all_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:checked="false"
        android:layout_alignTop="@+id/audio_play_all_text_View"
        android:layout_alignBottom="@+id/audio_play_all_text_View"
        android:layout_alignParentStart="true"/>



    <TextView
        android:id="@+id/audio_play_word_txt_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_word_translation"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/audio_play_all_text_View"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"/>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/audio_play_word_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:checked="true"
        android:layout_alignTop="@+id/audio_play_word_txt_View"
        android:layout_alignBottom="@+id/audio_play_word_txt_View"
        android:layout_alignParentStart="true"/>


    <TextView
        android:id="@+id/audio_play_definition_txt_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_definition_translation"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/audio_play_word_txt_View"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"/>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/audio_play_definition_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:checked="false"
        android:layout_alignTop="@+id/audio_play_definition_txt_View"
        android:layout_alignBottom="@+id/audio_play_definition_txt_View"
        android:layout_alignParentStart="true"/>


    <TextView
        android:id="@+id/audio_play_example_txt_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_example_translation"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/audio_play_definition_txt_View"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"/>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/audio_play_example_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:checked="false"
        android:layout_alignTop="@+id/audio_play_example_txt_View"
        android:layout_alignBottom="@+id/audio_play_example_txt_View"
        android:layout_alignParentStart="true"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp">



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/display_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_str"
            android:layout_alignParentEnd="true"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/display_reject_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reject_str"
            android:layout_alignParentStart="true"/>


    </RelativeLayout>

</RelativeLayout>