<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingEnd="@dimen/_15sdp"
    android:paddingStart="@dimen/_15sdp">

    <TextView
        android:id="@+id/setting_title_text_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_timer_duration_str"
        android:textSize="@dimen/_18ssp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textColor="@color/black"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/quiz_duration_title_text_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_time_second_str"
        android:textSize="@dimen/_15ssp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_alignTop="@+id/quiz_duration_number_picker"
        android:layout_alignBottom="@+id/quiz_duration_number_picker"
        android:layout_above="@+id/quiz_timer_duration_layout"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"/>

    <NumberPicker
        android:id="@+id/quiz_duration_number_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/_7sdp"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/quiz_duration_title_text_View"/>

    <TextView
        android:id="@+id/quiz_duration_second_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_str"
        android:textSize="@dimen/_15ssp"
        android:textColorLink="@color/black"
        android:layout_marginEnd="@dimen/_15sdp"
        android:gravity="start|center"
        android:layout_centerVertical="true"
        android:textColor="@color/black"
        android:layout_toStartOf="@+id/quiz_duration_number_picker"
        android:layout_alignTop="@+id/quiz_duration_number_picker"
        android:layout_alignBottom="@+id/quiz_duration_number_picker"
        android:layout_alignParentStart="true"/>


    <RelativeLayout
        android:id="@+id/quiz_timer_duration_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quiz_duration_number_picker"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_10sdp">

        <TextView
            android:id="@+id/quiz_timer_duration_confirmation_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmation"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="@dimen/_15ssp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:padding="@dimen/_10sdp"
            android:layout_alignParentEnd="true"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"/>


        <TextView
            android:id="@+id/quiz_timer_duration_settings_reject_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reject_str"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:layout_toStartOf="@+id/quiz_timer_duration_confirmation_settings_button"
            android:layout_marginEnd="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:gravity="center"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"/>


        <View
            android:id="@+id/quiz_timer_center_view"
            android:layout_width="@dimen/_1sdp"
            android:layout_height="@dimen/_1sdp"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/quiz_timer_duration_settings_cancel_timer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_timer_cancel_str"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:layout_toStartOf="@+id/quiz_timer_center_view"
            android:layout_alignParentStart="true"
            android:padding="@dimen/_10sdp"
            android:gravity="center"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"/>

    </RelativeLayout>
</RelativeLayout>