<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/unit_card_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    app:cardElevation="2dp"
    app:cardCornerRadius="7dp"
    android:layout_gravity="center"
    android:clickable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">


        <com.jackandphantom.circularimageview.RoundedImage
            android:id="@+id/unit_img"
            android:layout_width="170dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:padding="7dp"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:src="@drawable/loadimg"/>


        <TextView
            android:id="@+id/unit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_title"
            android:gravity="center"
            android:textColor="@color/black"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/unit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_text"
                android:textColor="#B8B8B8"
                android:gravity="center"/>

            <TextView
                android:id="@+id/unit_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_num"
                android:textColor="@color/black"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@id/unit_text"/>

        </RelativeLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>